# launch-economics

./: README.md  packages.txt  pyproject.toml  requirements.txt  setup.py
app/: app.py  requirements.txt
data/: spacex_raw.csv
docs/: joss_paper.md  technical_paper.md
launch-economics/: README.md  requirements.txt
launch-economics/app/: app.py
launch-economics/src/: data_pipeline.py
notebooks/: 01_eda_sacred_mandala.py  02_statistical_oracle.py  03_predictive_engine.py
sql/: schema_and_views.sql
src/: ml_models.py  sacred_viz.py
